<resources>
    <string name="app_name">ProductivityTracker</string>
    <string name="new_entry">New Entry</string>
    <string name="settings">Settings</string>
    <string name="add_new_entry">Add new Entry</string>
    <string name="enter_energy_level_hint">Enter your energy level (1 - very tired, 10 - highly motivated)</string>
    <string name="energy_level">Energy Level</string>
    <string name="warning_new_entry">Please enter a number from 1 to 10</string>
    <string name="time_in_hour">Hours</string>
    <string name="no_data_graph_description">You first have to enter new entries.</string>
    <string name="statistics">Statistics</string>
    <string name="most_productive_hour">•Your most productive time is at</string>
    <string name="clock">o\'clock</string>
    <string name="second_most_productive_hour">•Your second most productive time is at</string>
    <string name="least_productive_hour">•Your most unproductive time is at</string>
    <string name="notifications">Notifications</string>
    <string name="notification_summary">You get every hour a notification, so you can enter you energy level.</string>
    <string name="notification_allow">Allow Push-Ups</string>
    <string name="collect_more_data_to_unlock_this">Collect more date to unlock this statistics</string>
    <string name="start_notification">Start of workday</string>
    <string name="start_notification_summary">From this time you get hourly notifications (e.g. 9 o\'clock)</string>
    <string name="end_notification">End of workday</string>
    <string name="end_notification_summary">From this time you do not get more notifications (e.g. 17 o\'clock)</string>
    <string name="hour">hours</string>
    <string name="status_acquisition">Status Check</string>
    <string name="how_is_your_motivation">How big is your motivation?</string>
    <string name="faq">FAQ</string>
    <string name="fag_in_description">Read FAQ</string>
    <string name="most_productive_day">•Your most productive day is</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="most_unproductive_day">•Your most unproductive day is</string>
    <string name="ad_banner_statistic">ca-app-pub-4193465280509910/4777154980</string>
    <string name="ad_banner_new_entry">ca-app-pub-4193465280509910/5880614987</string>
    <string name="chart">Charts</string>
    <string name="enable_data_text">Mark the points on the graph</string>
    <string name="hour_statistics">Hour Statistics</string>
    <string name="day_statistics">Day Statistics</string>
    <string name="weekday">Weekdays</string>
    <string name="statistics_day_description">0-MON, 1-TUE, 2-WED, 3-THU, 4-FR, 5-SAT, 6-SUN</string>
</resources>
